--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cra-electron",
+  "name": "stamper",
   "repository": "https://github.com/maayanalbert/stamper2.git",
-  "description": "CRA + Electron sitting in a tree",
-  "author": "Kitze",
-  "version": "0.2.9",
+  "description": "Artboard Oriented Programming",
+  "author": "Maayan & Cam",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "cross-env": "^6.0.2",
@@ -20,7 +20,27 @@
     "electron-builder": "^21.2.0",
     "prettier": "^1.4.4",
     "react-scripts": "3.1.2",
-    "wait-on": "3.3.0"
+    "wait-on": "3.3.0",
+    "ace": "^1.3.0",
+    "ace-builds": "^1.4.7",
+    "async": "^3.1.0",
+    "async-mutex": "^0.1.4",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.4.1",
+    "file-loader": "^5.0.2",
+    "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
+    "mutex": "^1.0.4",
+    "node-sass": "^4.13.0",
+    "npm-check-updates": "^3.2.2",
+    "react": "next",
+    "react-ace": "^8.0.0",
+    "react-cristal": "0.0.12",
+    "react-dom": "next",
+    "react-lineto": "^3.1.3",
+    "react-resizable": "^1.10.1",
+    "styled-components": "^4.4.1"
   },
   "build": {
     "publish": {
