--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
+    "fs-jetpack": "^2.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.2",
-    "electron": "6.0.11",
-    "electron-builder": "^21.2.0",
-    "prettier": "^1.4.4",
-    "react-scripts": "3.1.2",
-    "wait-on": "3.3.0",
     "ace": "^1.3.0",
     "ace-builds": "^1.4.7",
     "async": "^3.1.0",
@@ -28,19 +23,27 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.4.1",
+    "concurrently": "^4.1.2",
+    "devtron": "^1.4.0",
+    "electron": "6.0.11",
+    "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "file-loader": "^5.0.2",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "mutex": "^1.0.4",
     "node-sass": "^4.13.0",
     "npm-check-updates": "^3.2.2",
+    "prettier": "^1.4.4",
     "react": "next",
     "react-ace": "^8.0.0",
     "react-cristal": "0.0.12",
     "react-dom": "next",
     "react-lineto": "^3.1.3",
     "react-resizable": "^1.10.1",
-    "styled-components": "^4.4.1"
+    "react-scripts": "3.1.2",
+    "styled-components": "^4.4.1",
+    "wait-on": "3.3.0"
   },
   "build": {
     "publish": {
