--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "version": "0.0.3",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "cross-env": "^6.0.2",
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
     "fs-jetpack": "^2.2.3",
+    "htmlparser": "^1.7.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0"
