--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "repository": "https://github.com/maayanalbert/stamper.git",
   "description": "Artboard Oriented Programming",
   "author": "Maayan & Cam",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
@@ -11,6 +11,7 @@
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
+    "esprima": "^4.0.1",
     "fs-jetpack": "^2.2.3",
     "htmlparser": "^1.7.7",
     "react": "^16.8.6",
