--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esprima": "^4.0.1",
     "fs-jetpack": "^2.2.3",
     "htmlparser": "^1.7.7",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0"
