checked if stamp has changed since last time

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs-jetpack": "^2.2.3",
     "htmlparser": "^1.7.7",
     "lodash": "^4.17.15",
+    "lzutf8": "^0.5.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0"
