--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "console-feed": "^2.8.10",
     "cross-env": "^6.0.2",
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.9",
