--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-sass": "^4.13.0",
     "npm-check-updates": "^3.2.2",
     "prettier": "^1.19.1",
+    "protractor-browser-logs": "^1.0.456",
     "react": "next",
     "react-ace": "^8.0.0",
     "react-cristal": "0.0.12",
