--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lzutf8": "^0.5.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "update-electron-app": "^1.2.0"
+    "update-electron-app": "^1.2.0",
+    "gh-pages": "^2.1.1"
   },
   "devDependencies": {
     "ace": "^1.3.0",
@@ -67,7 +68,10 @@
     "electron-build": "electron-builder",
     "deploy": "yarn react-build && electron-builder --publish=always",
     "build": "yarn react-build && yarn electron-build",
-    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "prewebdeploy": "yarn run build",
+    "webdeploy": "gh-pages -d build",
+    "webstart": "yarn react-start"
   },
   "browserslist": {
     "production": [
