--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "electron-updater": "^4.2.0",
     "esprima": "^4.0.1",
     "fs-jetpack": "^2.2.3",
+    "gh-pages": "^2.1.1",
     "htmlparser": "^1.7.7",
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "update-electron-app": "^1.2.0",
-    "gh-pages": "^2.1.1"
+    "scroll-events": "^1.1.3",
+    "update-electron-app": "^1.2.0"
   },
   "devDependencies": {
     "ace": "^1.3.0",
