--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
     "react": "^16.8.6",
+    "react-archer": "^1.5.0",
     "react-dom": "^16.8.6",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
