--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
     "console-feed": "^2.8.10",
     "cross-env": "^6.0.2",
+    "css-animation": "^2.0.4",
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
@@ -20,6 +22,7 @@
     "lzutf8": "^0.5.5",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
