--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "htmlparser": "^1.7.7",
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
+    "material-design-icons": "^3.0.1",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
     "react-bootstrap": "^1.0.0-beta.16",
