--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "animate.css": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
     "console-feed": "^2.8.10",
