--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-archer": "^1.5.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
+    "react-hotkeys": "^2.0.0",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
   },
