--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-archer": "^1.5.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-hotkeys": "^2.0.0",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
@@ -70,8 +71,7 @@
     }
   },
   "main": "public/electron.js",
-
-    "homepage": "./",
+  "homepage": "./",
   "scripts": {
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
