--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "repository": "https://github.com/maayanalbert/stamper.git",
   "description": "Artboard Oriented Programming",
   "author": "Maayan & Cam",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.2",
@@ -25,12 +25,15 @@
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
     "material-design-icons": "^3.0.1",
+    "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-browser-detection": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-hotkeys": "^2.0.0",
+    "react-tooltip": "^3.11.2",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
   },
