--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs-jetpack": "^2.2.3",
     "gh-pages": "^2.1.1",
     "htmlparser": "^1.7.7",
+    "jszip": "^3.2.2",
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
     "material-design-icons": "^3.0.1",
