--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "bootstrap": "^4.4.1",
     "concurrently": "^4.1.2",
     "devtron": "^1.4.0",
-    "electron": "6.0.11",
+    "electron": "^7.1.9",
     "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^5.0.2",
