--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.5.1",
     "animate.css": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
+    "chokidar": "^3.3.1",
     "console-feed": "^2.8.10",
     "cross-env": "^6.0.2",
     "css-animation": "^2.0.4",
