--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-browser-detection": "^1.2.1",
     "react-dom": "^16.8.6",
