--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "electron-updater": "^4.2.0",
     "esprima": "^4.0.1",
     "fs-jetpack": "^2.2.3",
-    "gh-pages": "^2.1.1",
     "htmlparser": "^1.7.7",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
@@ -57,6 +56,7 @@
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^5.0.2",
     "file-saver": "^2.0.2",
+    "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
     "mutex": "^1.0.4",
     "node-sass": "^4.13.0",
@@ -79,7 +79,8 @@
     }
   },
   "main": "public/electron.js",
-  "homepage": "./",
+  "homepage1": "./",
+  "homepage": "http://maayanalbert.github.io/post-chi-stamper",
   "scripts": {
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
