--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
     "material-design-icons": "^3.0.1",
+    "mime-types": "^2.1.26",
     "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
