--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@uifabric/file-type-icons": "^7.2.5",
     "animate.css": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.3.1",
@@ -29,6 +30,7 @@
     "lzutf8": "^0.5.5",
     "material-design-icons": "^3.0.1",
     "mime-types": "^2.1.26",
+    "office-ui-fabric-react": "^7.84.0",
     "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-archer": "^1.5.0",
