--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "console-feed": "^2.8.10",
     "cross-env": "^6.0.2",
     "css-animation": "^2.0.4",
+    "datauri": "^2.0.0",
     "deep-equal": "^2.0.1",
     "detect-browser": "^4.8.0",
     "electron-default-menu": "^1.0.1",
@@ -24,6 +25,7 @@
     "electron-updater": "^4.2.0",
     "esprima": "^4.0.1",
     "fs-jetpack": "^2.2.3",
+    "fs-readdir-recursive": "^1.1.0",
     "github-api": "^3.3.0",
     "htmlparser": "^1.7.7",
     "jszip": "^3.2.2",
@@ -42,6 +44,7 @@
     "react-helmet": "^5.2.1",
     "react-hotkeys": "^2.0.0",
     "react-tooltip": "^3.11.2",
+    "recursive-readdir": "^2.2.2",
     "scroll-events": "^1.1.3",
     "update-electron-app": "^1.2.0"
   },
