adding back to main repo

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
     }
   },
   "main": "public/electron.js",
-  "homepage1": "./",
-  "homepage": "http://maayanalbert.github.io/p5stamper-secret",
+  "homepage": "./",
   "scripts": {
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
